--- a/Root/Templates/footer.html
+++ b/Root/Templates/footer.html
@@ -1,7 +1,7 @@
 <div class="app-footer">	
 	<nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
 		<div class="container">
-			Talent Improving Exercise, OFS
+			<b>Talent Improving Exercise, OFS</b>
 		</div>
 	</nav>
 </div>
