--- a/Root/Templates/page-center.html
+++ b/Root/Templates/page-center.html
@@ -1,3 +1,3 @@
-<div class="center-content">
-	<img data-ng-src="img/library.jpg" class="home-image img-responsive" />
+<div class="center-content jumbotron">
+	<img data-ng-src="img/home.jpg" class="home-image img-responsive" />
 </div>
